docs: blog images moved to cdn

--- a/documentation/blog/2021-12-13-web3-refine.md
+++ b/documentation/blog/2021-12-13-web3-refine.md
@@ -10,8 +10,8 @@ hide_table_of_contents: false
 
 In this article, we will talk about what is web3 and a simple ethereum wallet login application with **refine**.
 
-import login from '@site/static/img/blog/2021-12-13-web3-refine/login.gif';
-import overview from '@site/static/img/blog/2021-12-13-web3-refine/overview.gif';
+
+
 
 <!--truncate-->
 
@@ -52,7 +52,7 @@ This example is simple intro to dApps development  built with web3 and **refine*
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={login} alt="login" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2021-12-13-web3-refine/login.gif" alt="login" />
 </div>
 <br />
 
@@ -62,7 +62,7 @@ This example is simple intro to dApps development  built with web3 and **refine*
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={overview} alt="overview" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2021-12-13-web3-refine/overview.gif" alt="overview" />
 </div>
 <br />
 
