--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -8,8 +8,8 @@ image: /img/placeholder.png
 hide_table_of_contents: false
 ---
 
-import upload from '@site/static/img/blog/2021-12-22-base64-upload/upload.png';
-import overview from '@site/static/img/blog/2021-12-22-base64-upload/overview.png';
+
+
 
 Uploading files using Base64 encoding is a common practice. In this guide, I'm going to show you how to upload files using base64 encoding
 
@@ -146,7 +146,7 @@ Now we have an input to interact with the user and select a file. Let's add the 
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={upload} alt="upload_screen" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2021-12-22-base64-upload/upload.png" alt="upload_screen" />
 </div>
 <br />
 
@@ -192,7 +192,7 @@ Here we take data in file format and encode it as Base64. Then we show this enco
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={overview} alt="overview" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2021-12-22-base64-upload/overview.png" alt="overview" />
 </div>
 <br />
 
