--- a/documentation/blog/2022-08-24-mui-icons.md
+++ b/documentation/blog/2022-08-24-mui-icons.md
@@ -4,18 +4,9 @@ description: A complete guide on using Material UI(MUI Icons) in a React app
 slug: mui-icons-in-react
 authors: doro_onome
 tags: [material-ui, react, icons, svg, mui]
-image: /img/blog/2022-08-24-mui-icons/mui-icons-social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/mui-icons-social.png
 hide_table_of_contents: false
 ---
-
-import fontIcon from '@site/static/img/blog/2022-08-24-mui-icons/font-icon.png';
-import iconDom from '@site/static/img/blog/2022-08-24-mui-icons/icon-dom.png';
-import iconIcon from '@site/static/img/blog/2022-08-24-mui-icons/icon-icon.png';
-import packagePng from '@site/static/img/blog/2022-08-24-mui-icons/package.png';
-import svgIcon from '@site/static/img/blog/2022-08-24-mui-icons/svg-icon.png';
-import taskComponent from '@site/static/img/blog/2022-08-24-mui-icons/task-component.png';
-import taskForm from '@site/static/img/blog/2022-08-24-mui-icons/task-form.png';
-import taskList from '@site/static/img/blog/2022-08-24-mui-icons/tasklist.png';
 
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
@@ -119,7 +110,7 @@ You should now see the updated dependencies on your package.json like this:
 
 
 <div class="img-container">
-    <img src={packagePng} alt="package" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/package.png" alt="package" />
 </div>
 
 <br/>
@@ -226,7 +217,7 @@ The code above demonstrates how to include the Camera icon and its primary theme
 Here’s the result:
 
 <div class="img-container">
-    <img src={iconDom} alt="iconDom" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/icon-dom.png" alt="iconDom" />
 </div>
 
 <br/>
@@ -283,7 +274,7 @@ Here’s the result:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={svgIcon} alt="svgIcon" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/svg-icon.png" alt="svgIcon" />
 </div>
 
 <br/>
@@ -327,7 +318,7 @@ Here’s the result
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={iconIcon} alt="iconIcon" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/icon-icon.png" alt="iconIcon" />
 </div>
 
 <br/>
@@ -428,7 +419,7 @@ Here’s the `Form` component:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={taskForm} alt="task form" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/task-form.png" alt="task form" />
 </div>
 
 <br/>
@@ -502,7 +493,7 @@ Here’s the `Task` component
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={taskComponent} alt="task component" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/task-component.png" alt="task component" />
 </div>
 
 <br/>
@@ -547,7 +538,7 @@ Here’s the final result:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={taskList} alt="task list" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-08-24-mui-icons/tasklist.png" alt="task list" />
 </div>
 
 <br/>
