--- a/documentation/blog/2022-09-04-next-link.md
+++ b/documentation/blog/2022-09-04-next-link.md
@@ -4,22 +4,9 @@ description: A guide for navigation between pages using Next.js Link
 slug: next-js-link-component
 authors: michael
 tags: [nextjs, next-link, navigation, react]
-image: /img/blog/2022-09-04-next-link/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/social.png
 hide_table_of_contents: false
 ---
-
-
-
-import social from '@site/static/img/blog/2022-09-04-next-link/social.png';
-import custom from '@site/static/img/blog/2022-09-04-next-link/custom.png';
-import demo from '@site/static/img/blog/2022-09-04-next-link/demo.gif';
-import home from '@site/static/img/blog/2022-09-04-next-link/home.png';
-import noreplace from '@site/static/img/blog/2022-09-04-next-link/noreplace.gif';
-import product from '@site/static/img/blog/2022-09-04-next-link/product.png';
-import withreplace from '@site/static/img/blog/2022-09-04-next-link/withreplace.gif';
-
-
- 
 
 ## Introduction
 If you have built websites and applications on the web, then you're very likely to have used a common method for navigation. Traditionally, navigation is often achieved with the HTML anchor element (`<a></a>`). The anchor element is primarily used for navigating within and outside websites and webpages, and it serves its purpose pretty well. 
@@ -209,7 +196,7 @@ If you navigate to `localhost:3000/products` you should see the page rendered li
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={product} alt="product" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/product.png" alt="product" />
 </div>
 
 <br/>
@@ -222,7 +209,7 @@ Now, if you click on any of the products, you'll be taken to the details page of
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={demo} alt="demo" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/demo.gif" alt="demo" />
 </div>
 
 <br/>
@@ -294,7 +281,7 @@ Now if you navigate to `localhost:8000` a custom red link should be displayed li
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={custom} alt="custom" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/custom.png" alt="custom" />
 </div>
 
 <br/>
@@ -357,7 +344,7 @@ The page should look like below:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={home} alt="home" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/home.png" alt="home" />
 </div>
 
 <br/>
@@ -370,7 +357,7 @@ If you click on the `Go to products page` link, watch how the application naviga
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={noreplace} alt="noreplace" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/noreplace.gif" alt="noreplace" />
 </div>
 
 <br/>
@@ -404,7 +391,7 @@ Now let's go back to the browser and see how the navigation works with `replace`
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={withreplace} alt="withreplace" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-04-next-link/withreplace.gif" alt="withreplace" />
 </div>
 
 <br/>
