--- a/documentation/blog/2022-09-07-next-env.md
+++ b/documentation/blog/2022-09-07-next-env.md
@@ -4,13 +4,13 @@ description: We will take a closer look at environment variables in Next.js
 slug: next-js-environment-variables
 authors: michael
 tags: [nextjs, enviroment-variables]
-image: /img/blog/2022-09-07-next-env/social.jpg
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-07-next-env/social.jpg
 hide_table_of_contents: false
 ---
 
 
 
-import deploy from '@site/static/img/blog/2022-09-07-next-env/deploy.png';
+
 
 
 ## Introduction
@@ -165,7 +165,7 @@ For example, to add environment variables to your live deployments (if you use [
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={deploy} alt="deploy" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-07-next-env/deploy.png" alt="deploy" />
 </div>
 
 #### Environment variable load order
