--- a/documentation/blog/2022-09-09-react-18.md
+++ b/documentation/blog/2022-09-09-react-18.md
@@ -4,18 +4,18 @@ description: React 18 was released! Are you looking to upgrade to React 18?  Lea
 slug: react-18-upgrade-guide
 authors: joel_adewole
 tags: [react, react-18]
-image: /img/blog/2022-09-09-react-18/social.jpeg
-featured_image: /img/blog/2022-09-09-react-18/featured.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/social.jpeg
+featured_image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/featured.png
 is_featured: true
 hide_table_of_contents: false
 ---
 
 
 
-import firstError from '@site/static/img/blog/2022-09-09-react-18/firstError.png';
-import secondError from '@site/static/img/blog/2022-09-09-react-18/secondError.png';
-import thirdError from '@site/static/img/blog/2022-09-09-react-18/thirdError.png';
-import clientError from '@site/static/img/blog/2022-09-09-react-18/clientError.png';
+
+
+
+
 
 
 
@@ -84,7 +84,7 @@ The application displays the following error:
 
 <br/>
  <div class="img-container">
-    <img src={firstError} alt="firstError" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/firstError.png" alt="firstError" />
 </div>
 
 <br/>
@@ -92,7 +92,7 @@ The application displays the following error:
 You will also notice the error below in your console:
 
 <div class="img-container">
-    <img src={secondError} alt="secondError" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/secondError.png" alt="secondError" />
 </div>
 
 <br/>
@@ -100,7 +100,7 @@ You will also notice the error below in your console:
 - `setState` of unmounted component gives a warning: In an attempt to update the state of an unmounted component, React might warn you of a memory leak.
   
 <div class="img-container">
-    <img src={thirdError} alt="thirdError" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/thirdError.png" alt="thirdError" />
 </div>
 
 <br/>
@@ -119,7 +119,7 @@ Let’s take a deeper look at these changes 👀:
 You might want to keep an eye out for the console warning listed below after an upgrade: 
 
  <div class="img-container">
-    <img src={clientError} alt="clientError" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-09-react-18/clientError.png" alt="clientError" />
 </div>
 
 <br/>
