--- a/documentation/blog/2022-09-18-mui-grid.md
+++ b/documentation/blog/2022-09-18-mui-grid.md
@@ -4,16 +4,16 @@ description: We'll discover the Material UI (MUI) Grid system with React example
 slug: material-ui-grid
 authors: doro_onome
 tags: [material-ui, react, mui, mui-grid, css]
-image: /img/blog/2022-09-18-mui-grid/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/social.png
 hide_table_of_contents: false
 ---
 
-import fluid from '@site/static/img/blog/2022-09-18-mui-grid/fluid.gif';
-import autoLayout from '@site/static/img/blog/2022-09-18-mui-grid/autoLayout.gif';
-import featuredPost from '@site/static/img/blog/2022-09-18-mui-grid/featuredPost.gif';
-import fluidGrid from '@site/static/img/blog/2022-09-18-mui-grid/fluidGrid.gif';
-import nestedGrid from '@site/static/img/blog/2022-09-18-mui-grid/nestedGrid.gif';
-import spacing from '@site/static/img/blog/2022-09-18-mui-grid/spacing.gif';
+
+
+
+
+
+
 
  
 
@@ -178,7 +178,7 @@ Here’s the result:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={spacing} alt="spacing1" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/spacing.gif" alt="spacing1" />
 </div>
 
 <br/>
@@ -233,7 +233,7 @@ Here’s the result;
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={fluid} alt="fluid" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/fluid.gif" alt="fluid" />
 </div>
 
 <br/>
@@ -287,7 +287,7 @@ Here’s the result:
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={fluidGrid} alt="fluidGrid" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/fluidGrid.gif" alt="fluidGrid" />
 </div>
 
 <br/>
@@ -340,7 +340,7 @@ The code above depicts three grid elements. The middle element is set to take ha
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={autoLayout} alt="autoLayout" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/autoLayout.gif" alt="autoLayout" />
 </div>
 
 <br/>
@@ -402,7 +402,7 @@ The code above showcases a nested MUI Grid system. The `<FrontRow />` component 
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={nestedGrid} alt="nestedGrid" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/nestedGrid.gif" alt="nestedGrid" />
 </div>
 
 <br/>
@@ -442,7 +442,7 @@ function MainFeaturedPost(props) {
       }}
     >
       
-      {<img style={{ display: 'none' }} src={post.image} alt={post.imageText} />}
+      {<img style={{ display: 'none' }} src="https://refine.ams3.cdn.digitaloceanspaces.comundefined" alt={post.imageText} />}
       <Box
         sx={{
           position: 'absolute',
@@ -618,7 +618,7 @@ We have a simple Blog Layout created with React and Material UI.
         <div class="control orange"></div>
         <div class="control green"></div>
     </div>
-    <img src={featuredPost} alt="featuredPost" />
+    <img src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-09-18-mui-grid/featuredPost.gif" alt="featuredPost" />
 </div>
 
 <br/>
