--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -4,14 +4,14 @@ description: The advantages of pnpm and comparison guide.
 slug: pnpm-vs-npm-and-yarn
 authors: muhammad_khabbab
 tags: [pnpm, package manager]
-image: /img/blog/2022-10-13-pnpm-post/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-13-pnpm-post/social.png
 hide_table_of_contents: false
 ---
 
-import image1 from '@site/static/img/blog/2022-10-13-pnpm-post/pnpm-image-1.png';
-import image2 from '@site/static/img/blog/2022-10-13-pnpm-post/pnpm-image-2.png';
-import image3 from '@site/static/img/blog/2022-10-13-pnpm-post/pnpm-image-3.png';
-import image4 from '@site/static/img/blog/2022-10-13-pnpm-post/pnpm-image-4.png';
+
+
+
+
 
 
 ## Introduction
@@ -43,7 +43,7 @@ Npm uses flattened ```node_modules```. The flattened dependency results in many 
 Let’s explain this with a basic example. One of your projects needs an express module, and express has a dependency package named “debug”. This is how the structure of node modules will look like:
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center", width:"300px"}}  src={image1}  alt="pnpm vs yarn" />
+   <img style={{alignSelf:"center", width:"300px"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-13-pnpm-post/pnpm-image-1.png"  alt="pnpm vs yarn" />
 <em> Figure 1 - Example project dependencies</em>
 </div>
 
@@ -64,7 +64,7 @@ Let’s see the pnpm version of the express and node modules discussed in the pr
 <br/>
 
 <div className="centered-image" >
-   <img style={{alignSelf:"center", width:"400px"}}  src={image2}  alt="pnpm vs npm" />
+   <img style={{alignSelf:"center", width:"400px"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-13-pnpm-post/pnpm-image-2.png"  alt="pnpm vs npm" />
 	<div><em> Figure 2 - project structure with pnpm</em></div>
 </div>
 
@@ -77,7 +77,7 @@ If you look at ```express/4.0.0```, the ```express``` module is a hard link to t
 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center", width:"400px"}}  src={image3}  alt="pnpm" />
+   <img style={{alignSelf:"center", width:"400px"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-13-pnpm-post/pnpm-image-3.png"  alt="pnpm" />
 <em> Figure 3 - Global pnpm store</em>
 </div>
 
@@ -99,7 +99,7 @@ As shown in the previous section, pnpm uses a content-addressable file system to
 ### Improved speed
 The speed of package installation with pnpm is significantly better than npm and yarn. If you look at the below benchmark tests, you can see that pnpm performs better in most cases thano npm and yarn. 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={image4}  alt="pnpm speed" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-13-pnpm-post/pnpm-image-4.png"  alt="pnpm speed" />
 <em> source - https://pnpm.io/benchmarks</em>
 </div>
 
