--- a/documentation/blog/2022-10-17-js-slice.md
+++ b/documentation/blog/2022-10-17-js-slice.md
@@ -4,7 +4,7 @@ description: JavaScript Slice method implementation on Array and Strings with ex
 slug: javascript-slice
 authors: abdullah_numan
 tags: [javascript, javascript-slice]
-image: /img/blog/2022-10-17-js-slice/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-17-js-slice/social.png
 hide_table_of_contents: false
 ---
 
