--- a/documentation/blog/2022-11-02-js-every.md
+++ b/documentation/blog/2022-11-02-js-every.md
@@ -4,7 +4,7 @@ description: In this post, we expound on with examples of what the JavaScript ev
 slug: javascript-every-method
 authors: abdullah_numan
 tags: [javascript, javascript-every]
-image: /img/blog/2022-11-02-js-every/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-11-02-js-every/social.png
 hide_table_of_contents: false
 ---
 
