--- a/documentation/blog/2022-11-03-esbuild.md
+++ b/documentation/blog/2022-11-03-esbuild.md
@@ -4,11 +4,11 @@ description: The advantages of using esbuild and how to use it in your project.
 slug: what-is-esbuild
 authors: muhammad_khabbab
 tags: [esbuild, js-bundler, dev-tools]
-image: /img/blog/2022-11-03-esbuild/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-11-03-esbuild/social.png
 hide_table_of_contents: false
 ---
 
-import image from '@site/static/img/blog/2022-11-03-esbuild/esbuild-chart.png';
+
 
 ## Introduction
 Bundlers are an essential component of the JavaScript ecosystem. As the name implies, bundlers generate one or more module bundles. Module bundlers process the JavaScript applications and build dependency graphs to map each module needed by your project. Generally speaking, bundlers perform the following tasks:
@@ -97,7 +97,7 @@ Watch mode means the **esbuild** can detect the changes in the source code as th
 If you look at the below comparison between different bundlers, you can see that esbuild has a significant performance advantage over its competitors. Image a large team with many projects and dependencies where reducing build times is crucial for product development. The magic lies in the ability of esbuild to parallelize printing, parsing, and source map generation. 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={image}  alt="esbuild" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-11-03-esbuild/esbuild-chart.png"  alt="esbuild" />
 <em> Source - https://esbuild.github.io/</em>
 </div>
 
