--- a/documentation/blog/2022-11-09-nvm.md
+++ b/documentation/blog/2022-11-09-nvm.md
@@ -4,7 +4,7 @@ description: Guide to using NVM with Mac and Windows
 slug: install-nvm-mac-and-windows
 authors: chidume_nnamdi
 tags: [nvm, dev-tools]
-image: /img/blog/2022-11-09-nvm/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-11-09-nvm/social.png
 hide_table_of_contents: false
 ---
 
