--- a/documentation/blog/2022-11-12-next-13.md
+++ b/documentation/blog/2022-11-12-next-13.md
@@ -4,7 +4,7 @@ description: Next.js 13 is out! Let's see the new features in this release.
 slug: new-features-in-next-js-13
 authors: michael
 tags: [nextjs, nextjs-13]
-image: /img/blog/2022-11-12-next-13/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-11-12-next-13/social.png
 hide_table_of_contents: false
 ---
 
