--- a/documentation/blog/2022-12-02-git-stash.md
+++ b/documentation/blog/2022-12-02-git-stash.md
@@ -4,17 +4,17 @@ description: We will take a look the examples of using git stash command
 slug: git-stash
 authors: muhammad_khabbab
 tags: [git, dev-tools]
-image: /img/blog/2022-12-02-git-stash/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/social.png
 hide_table_of_contents: false
 ---
 
 
-import gitstash1 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-1.png';
-import gitstash2 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-2.png';
-import gitstash3 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-3.png';
-import gitstash4 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-4.png';
-import gitstash5 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-5.png';
-import gitstash6 from '@site/static/img/blog/2022-12-02-git-stash/git-stash-6.png';
+
+
+
+
+
+
 
 
 
@@ -102,7 +102,7 @@ Although it is not mandatory to name a stash, you can do that through `git stash
 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={gitstash1}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-1.png"  alt="git stash" />
 </div>
 
 <br/>
@@ -114,7 +114,7 @@ If you want to stash all your untracked files in the stash stack, then execute t
 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={gitstash2}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-2.png"  alt="git stash" />
 </div>
 
 <br/>
@@ -124,7 +124,7 @@ If you want to stash all your untracked files in the stash stack, then execute t
 It is very easy to create a new branch from your latest stash. If you run `git stash branch <branchName>`, it will create a new branch from the latest stash. You can use the command ` git stash branch <branch_name> stash@{revision}` to generate a new branch from a specific stash. 
 
 <div className="centered-image">
-   <img style={{alignSelf:"center"}}  src={gitstash3}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-3.png"  alt="git stash" />
 </div>
 
 <br/>
@@ -133,7 +133,7 @@ It is very easy to create a new branch from your latest stash. If you run `git s
 Just execute the command `git stash list` to see the list of current stashes. 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={gitstash4}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-4.png"  alt="git stash" />
 </div>
 
 <br/>
@@ -142,7 +142,7 @@ Just execute the command `git stash list` to see the list of current stashes.
 You can apply the git stash by running the command `git stash apply stash^{/MyStash1}`.
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={gitstash5}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-5.png"  alt="git stash" />
 </div>
 
 <br/>
@@ -152,7 +152,7 @@ Note that `git stash pop` removes the stash after applying it. `git stash apply`
 
 
 <div className="centered-image"  >
-   <img style={{alignSelf:"center"}}  src={gitstash6}  alt="git stash" />
+   <img style={{alignSelf:"center"}}  src="https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-12-02-git-stash/git-stash-6.png"  alt="git stash" />
 </div>
 
 <br/>
