--- a/documentation/blog/2022-10-25-js-some.md
+++ b/documentation/blog/2022-10-25-js-some.md
@@ -4,7 +4,7 @@ description: JavaScript some method implementation on Array with examples
 slug: javascript-some-method
 authors: abdullah_numan
 tags: [javascript, javascript-some]
-image: /img/blog/2022-10-25-js-some/social.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/blog/2022-10-25-js-some/social.png
 hide_table_of_contents: false
 ---
 
