--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -218,14 +218,6 @@ The Base64 file upload process with **refine** is very simple. How to use it is 
 
 [Refer to the **refine** Base64 Upload guide for more information. →](https://refine.dev/docs/guides-and-concepts/upload/base64-upload/) 
 
-[View Source](https://github.com/refinedev/refine/tree/master/examples/upload/base64Upload)
+## Example
 
-## Refine Base64 Upload Live StackBlitz Example
-
-<iframe src="https://stackblitz.com/github/refinedev/refine/tree/master/examples/upload-antd-base64/?embed=1&view=preview&theme=dark&preset=node&ctl=1"
-     style={{width: "100%", height:"80vh", border: "0px", borderRadius: "8px", overflow:"hidden"}}
-     title="refine-base64-upload-example"
-     allow="accelerometer; ambient-light-sensor; camera; encrypted-media; geolocation; gyroscope; hid; microphone; midi; payment; usb; vr; xr-spatial-tracking"
-     sandbox="allow-forms allow-modals allow-popups allow-presentation allow-same-origin allow-scripts"
-></iframe>
- 
+<StackblitzExample path="upload-antd-base64" />
