docs: fix blog images

--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -210,7 +210,7 @@ Here we take data in file format and encode it as Base64. Then we show this enco
 
 ---
 
-<PromotionBanner title="Does your CRUD app need server state management?" image="/img/generic_banner.png" />
+<PromotionBanner title="Does your CRUD app need server state management?" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/generic_banner.png" />
 
 ---
 ## How to Base64 Upload with Refine?
