--- a/documentation/blog/2022-09-09-react-18.md
+++ b/documentation/blog/2022-09-09-react-18.md
@@ -178,7 +178,7 @@ const root = hydrateRoot(app, <App tab="home" />);
 
 ---
 
-<PromotionBanner title="Tired of looking for the best template for your B2B app?" image="/img/diagram.png" />
+<PromotionBanner title="Tired of looking for the best template for your B2B app?" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/diagram.png" />
 
 ---
 
