--- a/documentation/blog/2022-10-13-pnpm-post.md
+++ b/documentation/blog/2022-10-13-pnpm-post.md
@@ -88,7 +88,7 @@ Because of this approach, pnpm re-uses the same packages if they are already ins
 
 ---
 
-<PromotionBanner title="Backend devs love this React framework!" image="/img/generic_banner.png" />
+<PromotionBanner title="Backend devs love this React framework!" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/generic_banner.png" />
 
 ---
 
