--- a/documentation/blog/2022-11-02-js-every.md
+++ b/documentation/blog/2022-11-02-js-every.md
@@ -186,7 +186,7 @@ So, **JavaScript `every()`** with `thisArg` does not work as expected with `call
 
 ---
 
-<PromotionBanner title="Backend devs love this React framework!" image="/img/generic_banner.png" />
+<PromotionBanner title="Backend devs love this React framework!" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/generic_banner.png" />
 
 ---
 
