--- a/documentation/blog/2022-11-03-esbuild.md
+++ b/documentation/blog/2022-11-03-esbuild.md
@@ -105,7 +105,7 @@ If you look at the below comparison between different bundlers, you can see that
 
 ---
 
-<PromotionBanner title="Backend devs love this React framework!" image="/img/diagram.png" />
+<PromotionBanner title="Backend devs love this React framework!" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/diagram.png" />
 
 ---
 
