--- a/documentation/blog/2022-12-02-git-stash.md
+++ b/documentation/blog/2022-12-02-git-stash.md
@@ -76,7 +76,7 @@ Your changes preserved through `git stash` are saved in your project’s .git di
 
 ---
 
-<PromotionBanner title="Building a side project?" image="/img/diagram.png" />
+<PromotionBanner title="Building a side project?" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/diagram.png" />
 
 ---
 
