--- a/documentation/blog/2022-09-04-next-link.md
+++ b/documentation/blog/2022-09-04-next-link.md
@@ -62,7 +62,7 @@ export default Home
 
 ---
 
-<PromotionBanner title="Not confident with your frontend skills?" image="/img/generic_banner.png" />
+<PromotionBanner title="Not confident with your frontend skills?" image="https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/generic_banner.png" />
 
 ---
 
