docs: update placeholder image URL

--- a/documentation/blog/2021-12-13-web3-refine.md
+++ b/documentation/blog/2021-12-13-web3-refine.md
@@ -4,7 +4,7 @@ description: Sign-in Ethereum with Web3 and Refine
 slug: web3-with-refine
 authors: melih
 tags: [refine, web3, dapps, metamask, login-ethereum]
-image: /img/placeholder.png
+image: /website/static/img/placeholder.png
 hide_table_of_contents: false
 ---
 
