chore: fix placeholder image

--- a/documentation/blog/2021-12-22-base64-upload.md
+++ b/documentation/blog/2021-12-22-base64-upload.md
@@ -4,7 +4,7 @@ description: Uploading files using Base64 encoding is a common practice. In this
 slug: how-to-base64-upload
 authors: melih
 tags: [JavaScript, how-to, base64, file-upload]
-image: /website/static/img/placeholder.png
+image: https://refine.ams3.cdn.digitaloceanspaces.com/website/static/img/placeholder.png
 hide_table_of_contents: false
 ---
 
